BUGFIX Issue #612: Smart faces rollingPanel not working on small devices

--- a/showcase-core/src/main/resources/org/cruxframework/showcasecore/client/resource/small/cssShowcaseSmall.css
+++ b/showcase-core/src/main/resources/org/cruxframework/showcasecore/client/resource/small/cssShowcaseSmall.css
@@ -965,15 +965,16 @@ body
 
 
 /* RollingPanel */
-.showcase-RollingPanel
+.showcase-RollingPanel, .showcase-cust-RollingPanel
 {
-	height: 200px;
+	height: 300px;
 	width: 250px;
 }
 
 .rollingPanel-panel
 {
 	margin-bottom: 50px;
+	display: block !important;
 }
 
 .rollingPanel-image
